--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -205,7 +205,7 @@ p {
     font: 5em "BebasNeueBold";
     color: #fff;
     text-decoration: none;
-    text-shadow: 0.1em 0.5em 0px #202226;
+    text-shadow: 0.1em 0.3em 0px rgba(32, 34, 38, 0.5);
     letter-spacing: 0.1em;
     white-space: nowrap; }
   #navigation .lts a {
@@ -213,6 +213,10 @@ p {
 
 .nav_active {
   left: 0 !important; }
+
+#contacts_block {
+  background: #000;
+  height: 100%; }
 
 @media screen and (max-width: 3500px) {
   .container {
