--- a/portfolio/Barbershop/app/css/dop.css
+++ b/portfolio/Barbershop/app/css/dop.css
@@ -48,7 +48,7 @@
     #home .container .home_page .top_section {
       width: 100%;
       position: relative;
-      padding-top: 45em;
+      padding-top: 60em;
       z-index: 2;
       display: -webkit-box;
       display: -webkit-flex;
@@ -79,7 +79,7 @@
           color: #fff;
           letter-spacing: 0.5em;
           text-align: center;
-          padding-bottom: 0.8em;
+          padding-bottom: 0.4em;
           padding-left: 0.5em; }
         #home .container .home_page .top_section .left_item .item_content, #home .container .home_page .top_section .right_item .item_content {
           display: -webkit-box;
@@ -150,7 +150,7 @@
         color: #fff;
         letter-spacing: 0.5em;
         padding-top: 0.4em;
-        padding-bottom: 0.3em;
+        padding-bottom: 0.1em;
         text-align: center; }
       #home .container .home_page .center_section .content_center {
         display: -webkit-box;
@@ -216,7 +216,8 @@
       z-index: 2;
       -webkit-align-self: flex-end;
           -ms-flex-item-align: end;
-              align-self: flex-end; }
+              align-self: flex-end;
+      padding-bottom: 5em; }
       #home .container .home_page .bottom_section .top {
         font: 4.95em "BebasNeueLight";
         color: #fff;
@@ -247,7 +248,7 @@
   #home .container, html {
     min-height: 630px; }
   #home .container {
-    padding-bottom: 3em; }
+    font-size: 2.5px; }
   #home .container .home_page .top_section .left_item .item_content .block p, #home .container .home_page .top_section .right_item .item_content .block p {
     font-size: 6em;
     padding-top: 0.4em;
@@ -294,7 +295,7 @@
 
 @media screen and (max-width: 1023px) {
   #home .container, html {
-    min-height: 1000px; }
+    min-height: 1100px; }
   #home .container .home_page .top_section .left_item .item_content .block, #home .container .home_page .top_section .right_item .item_content .block {
     text-align: center; }
   #home .container .home_page .top_section .left_item, #home .container .home_page .top_section .right_item {
@@ -310,7 +311,9 @@
 
 @media screen and (max-width: 767px) {
   #home .container, html {
-    min-height: 760px; } }
+    min-height: 760px; }
+  #home .container .home_page .top_section .left_item .item_content .block, #home .container .home_page .top_section .right_item .item_content .block {
+    margin: 0 3em; } }
 
 @media screen and (max-width: 567px) {
   #home .container, html {
@@ -341,11 +344,17 @@
   #home .container .home_page .center_section h5 {
     padding-bottom: 1em; }
   #home .container .home_page .bottom_section {
-    font-size: 2em; } }
+    font-size: 2em; }
+  #home .container .home_page .bg {
+    display: none; } }
 
 @media screen and (max-width: 400px) {
   #home .container .home_page .center_section .content_center .block {
     width: 80%; }
   #home .container .home_page .center_section .content_center .block .top {
     width: 84.6em;
-    height: 47.6em; } }
+    height: 47.6em; }
+  #home .container {
+    font-size: 2.2px; }
+  #home .container .home_page .top_section {
+    padding-top: 30em; } }
