--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -395,25 +395,30 @@
         margin: 0 3em; }
 
 @media screen and (max-width: 9999px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 2092px; } }
 
 @media screen and (max-width: 3500px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 1260px; } }
 
 @media screen and (max-width: 2260px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 996px; } }
 
 @media screen and (max-width: 1680px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 620px; }
   #home .container .tab_content .home_page .tab_content_block .number {
     padding-top: 0.1em; }
   #home .container .tab_content .home_page .tab_content_block h2 {
     padding-top: 3.5em; }
-  #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+  #home .container .tab_content .moscow_page .tab_content_block h2,
+  #home .container .tab_content .spb_page .tab_content_block h2 {
     padding-top: 4.5em; }
   #home .container .tab_content .reg_page .tab_content_block h2 {
     padding-top: 2em; }
@@ -421,29 +426,35 @@
     padding-top: 0.6em !important; } }
 
 @media screen and (max-width: 1365px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 640px; }
   #home .container .tab_content .home_page .bg_tab {
     width: 95%;
     left: 2.5%; }
   #home .container .tab_content .home_page .tab_content_block h2 {
     letter-spacing: 0.4em; }
-  #home .container .tab_content .moscow_page .bg_tab, #home .container .tab_content .spb_page .bg_tab, #home .container .tab_content .reg_page .bg_tab {
+  #home .container .tab_content .moscow_page .bg_tab,
+  #home .container .tab_content .spb_page .bg_tab,
+  #home .container .tab_content .reg_page .bg_tab {
     width: 95% !important;
     left: 2.5% !important; } }
 
 @media screen and (max-width: 1023px) {
   #home .container .tab_name .tab_names p {
     font-size: 7em; }
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 576px; } }
 
 @media screen and (max-width: 767px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 400px; } }
 
 @media screen and (max-width: 567px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 568px; }
   #home .container .tab_content .moscow_page .tab_content_block .number,
   #home .container .tab_content .spb_page .tab_content_block .number,
@@ -457,9 +468,16 @@
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center; }
-  #home .container .tab_content .moscow_page .tab_content_block .number .top, #home .container .tab_content .spb_page .tab_content_block .number .top, #home .container .tab_content .reg_page .tab_content_block .number .top {
+  #home .container .tab_content .moscow_page .tab_content_block .number .top,
+  #home .container .tab_content .spb_page .tab_content_block .number .top,
+  #home .container .tab_content .reg_page .tab_content_block .number .top {
     padding-bottom: 0.25em; }
-  #home .container .tab_content .moscow_page .tab_content_block .number .left p .left_item, #home .container .tab_content .moscow_page .tab_content_block .number .right p .left_item, #home .container .tab_content .spb_page .tab_content_block .number .left p .left_item, #home .container .tab_content .spb_page .tab_content_block .number .right p .left_item, #home .container .tab_content .reg_page .tab_content_block .number .left p .left_item, #home .container .tab_content .reg_page .tab_content_block .number .right p .left_item {
+  #home .container .tab_content .moscow_page .tab_content_block .number .left p .left_item,
+  #home .container .tab_content .moscow_page .tab_content_block .number .right p .left_item,
+  #home .container .tab_content .spb_page .tab_content_block .number .left p .left_item,
+  #home .container .tab_content .spb_page .tab_content_block .number .right p .left_item,
+  #home .container .tab_content .reg_page .tab_content_block .number .left p .left_item,
+  #home .container .tab_content .reg_page .tab_content_block .number .right p .left_item {
     font-size: 8em; }
   #home .container .tab_content .home_page .tab_content_block .number {
     font-size: 100em; }
@@ -532,7 +550,9 @@
     -webkit-align-self: center !important;
         -ms-flex-item-align: center !important;
             align-self: center !important; }
-  #home .container .tab_content .moscow_page .tab_content_block .number .right .number, #home .container .tab_content .spb_page .tab_content_block .number .right .number, #home .container .tab_content .reg_page .tab_content_block .number .right .number {
+  #home .container .tab_content .moscow_page .tab_content_block .number .right .number,
+  #home .container .tab_content .spb_page .tab_content_block .number .right .number,
+  #home .container .tab_content .reg_page .tab_content_block .number .right .number {
     font-size: 10em;
     letter-spacing: 0.13em; }
   #home .container .tab_content .reg_page .tab_content_block .number .right p {
@@ -560,9 +580,11 @@
     bottom: 25em; }
   #home .container .tab_name .tab_names p span {
     bottom: -0.8em; }
-  #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+  #home .container .tab_content .moscow_page .tab_content_block h2,
+  #home .container .tab_content .spb_page .tab_content_block h2 {
     margin-bottom: 0.8em; }
-  #home .container .tab_content .moscow_page .tab_content_block .number .right .more, #home .container .tab_content .spb_page .tab_content_block .number .right .more {
+  #home .container .tab_content .moscow_page .tab_content_block .number .right .more,
+  #home .container .tab_content .spb_page .tab_content_block .number .right .more {
     padding-top: 1em; } }
 
 @media screen and (max-width: 567px) and (max-height: 568px) {
