--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -7,8 +7,8 @@
 }
 
 html {
-	height: 100%;
-	background: #101011;
+    height: 100%;
+    background: #101011;
 }
 
 
@@ -16,75 +16,76 @@ body {
     font-size: 10px;
     height: 100%;
 }
+
 .wrapper_active {
-	position: fixed !important;
-	width: 100%;
+    position: fixed !important;
+    width: 100%;
 }
 
 p {
-	margin: 0;
+    margin: 0;
 }
 
-    .nav-btn {
-        display: none;
-        position: absolute;
-        right: 15px;
-        top: 23px;
-        z-index: 1000;
-        a {
-            display: block;
-            position: relative;
-            height: 25px;
-            width: 30px;
-             box-sizing: border-box;
+.nav-btn {
+    display: none;
+    position: absolute;
+    right: 15px;
+    top: 23px;
+    z-index: 1000;
+    a {
+        display: block;
+        position: relative;
+        height: 25px;
+        width: 30px;
+        box-sizing: border-box;
         transition: .3s ease;
-            span {
-                display: block;
-                height: 3px;
-                width: 100%;
-                background-color: #fff;
-                position: absolute;
-                top: 45%;
-                margin-top: -1px;
-                transition: .3s ease;
-            }
-            &::before {
-                display: block;
-                content: "";
-                height: 3px;
-                width: 100%;
-                background-color: #fff;
-                position: absolute;
-                transition: .3s ease;
-                top: 0;
-            }
-            &::after {
-                display: block;
-                content: "";
-                height: 3px;
-                width: 100%;
-                background-color: #fff;
-                position: absolute;
-                bottom: 0;
-                transition: .3s ease;
-            }
+        span {
+            display: block;
+            height: 3px;
+            width: 100%;
+            background-color: #fff;
+            position: absolute;
+            top: 45%;
+            margin-top: -1px;
+            transition: .3s ease;
         }
-        .a_active {
-            &::before {
-                transform: rotate(45deg);
-                top: 11px;
-                width: 34px;
-            }
-            &::after {
-                transform: rotate(-45deg);
-                bottom: 11px;
-                width: 34px;
-            }
-            span {
-                background-color: transparent !important;
-            }
+        &::before {
+            display: block;
+            content: "";
+            height: 3px;
+            width: 100%;
+            background-color: #fff;
+            position: absolute;
+            transition: .3s ease;
+            top: 0;
+        }
+        &::after {
+            display: block;
+            content: "";
+            height: 3px;
+            width: 100%;
+            background-color: #fff;
+            position: absolute;
+            bottom: 0;
+            transition: .3s ease;
         }
     }
+    .a_active {
+        &::before {
+            transform: rotate(45deg);
+            top: 11px;
+            width: 34px;
+        }
+        &::after {
+            transform: rotate(-45deg);
+            bottom: 11px;
+            width: 34px;
+        }
+        span {
+            background-color: transparent !important;
+        }
+    }
+}
 
 #lang_block {
     display: flex;
@@ -100,7 +101,7 @@ p {
         margin-left: 0.33em;
         letter-spacing: 0.2em;
         &:first-child {
-        	margin-left: 0;
+            margin-left: 0;
         }
     }
     .active_lang {
@@ -150,43 +151,152 @@ p {
 }
 
 #navigation {
-        	display: flex;
-        	justify-content: center;
-        	position: absolute;
-        	width: 100%;
-        	transition: .5s ease;
-        	margin-top: 43.6em;
-        	z-index: 3;
-        	ul {
-        		display: flex;
-        		padding: 0;
-        		margin: 0;
-        	}
-        	li {
-        		margin: 0 6em;
-        	}
-        	a {
-        		display: block;
-        		font: 5em "BebasNeueBold";
-        		color: #fff;
-        		text-decoration: none;
-        		text-shadow: 0.1em 0.3em 0px rgba(32, 34, 38, 0.5);
-        		letter-spacing: 0.1em;
-        		white-space: nowrap;
-        	}
-        	.lts {
-        		a {
-        			letter-spacing: 0.3em;
-        		}
-        	}
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    transition: .5s ease;
+    margin-top: 43.6em;
+    z-index: 3;
+    ul {
+        display: flex;
+        padding: 0;
+        margin: 0;
+    }
+    li {
+        margin: 0 6em;
+    }
+    a {
+        display: block;
+        font: 5em "BebasNeueBold";
+        color: #fff;
+        text-decoration: none;
+        text-shadow: 0.1em 0.3em 0px rgba(32, 34, 38, 0.5);
+        letter-spacing: 0.1em;
+        white-space: nowrap;
+    }
+    .lts {
+        a {
+            letter-spacing: 0.3em;
         }
-.nav_active {
-	left: 0 !important;
+    }
 }
 
-#contacts_block {
-	background: #000;
-	height: 100%;
+.nav_active {
+    left: 0 !important;
+}
+
+#contacts_tab {
+    height: 100%;
+    position: relative;
+    z-index: 2;
+    .bg_all {
+    	position: absolute;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+    	background: url(../img/bg_moscov.jpg) center center;
+    	background-size: cover;
+    }
+    .bg_tab {
+        position: absolute;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        .container {
+        	position: relative;
+            .bg {
+            	position: absolute;
+                width: 105%;
+                left: -2.5%;
+                height: 100%;
+                background: url(../img/bg_logo.png) no-repeat center center;
+                background-size: contain;
+            }
+        }
+    }
+    .bg_portret {
+    	position: absolute;
+    	z-index: 3;
+    	right: 0;
+    	bottom: 0;
+    	background: url(../img/portret.png);
+    	background-size: cover;
+    	width: 176em;
+    	height: 176em;
+    }
+    .container {
+        position: relative;
+        height: 100%;
+        z-index: 3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        min-height: 100vh;
+        .top {
+        	display: block;
+        	width: 100%;
+        	font: 8em "BebasNeueBook";
+        	color: #fff;
+        	text-align: center;
+        	letter-spacing: 0.35em;
+        	padding-left: 0.35em;
+            padding-top: 3em;
+        }
+        .bottom {
+        	display: block;
+        	font: 8em "BebasNeueBook";
+        	color: #fff;
+        	text-align: center;
+        	letter-spacing: 0.21em;
+        	padding-left: 0.21em;
+        }
+        h2 {
+        	font: 10.7em "BebasNeueRegular";
+        	color: #fff;
+        	text-align: center;
+        	letter-spacing: 0.1em;
+        }
+        .number {
+        	font: 10.7em "BebasNeueRegular";
+        	text-align: center;
+        	color: #fff;
+        	letter-spacing: 0.175em;
+        	padding-right: 0.45em;
+        	padding-top: 0.1em;
+        }
+        .bottom_block {
+        	padding-top: 15em;
+        	.first {
+        		font: 5.4em "RobotoRegular";
+        		color: #fff;
+        		text-align: center;
+        	}
+        	.second {
+        			font: 8.4em "BebasNeueBook";
+        			color: #fff;
+        			text-align: center;
+        			letter-spacing: 0.095em;
+        			padding-left: 0.095em;
+        			span {
+        				font-family: "BebasNeueRegular";
+        			}
+        	}
+        }
+        .footer {
+        		display: flex;
+        		justify-content: center;
+        		position: absolute;
+        		bottom: 5em;
+        		width: 100%;
+        		p {
+        			font: 3.7em "RobotoRegular";
+        			color: #c6c6c6;
+        			padding: 0 1em;
+        			text-align: center;
+        		}
+        	}
+    }
 }
 
 
