--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -7,7 +7,7 @@
     }
 }
 
-.bg_page_home{
+.bg_page_home {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -16,17 +16,18 @@
 }
 
 .bg_page_other {
-	  width: 100%;
+    width: 100%;
     height: 100%;
     position: absolute;
-	  background: url(../img/bg_moscov.jpg) no-repeat center center;
+    background: url(../img/bg_moscov.jpg) no-repeat center center;
     background-size: cover;
 }
 
 
 #home {
     .container {
-        position: relative;        .tab_content {
+        position: relative;
+        .tab_content {
             height: 100%;
             .home_page {
                 height: 100%;
@@ -219,8 +220,8 @@
                     }
                 }
             }
-             .spb_page {
-               .bg_city {
+            .spb_page {
+                .bg_city {
                     p {
                         font: 46.3em "BebasNeueBold";
                         color: #fff;
@@ -231,31 +232,30 @@
                 }
             }
             .reg_page {
-            	
-            	.tab_content_block .number {
-            		justify-content: space-between !important;
-            	}
-            	.left {
-                    	align-self: flex-start !important;
-                    	margin-left: 45em;
 
-                    }
-              .right {
-              	align-self: flex-end !important;
-                .right_top {
-                	padding-right: 50em;
+                .tab_content_block .number {
+                    justify-content: space-between !important;
                 }
-              	.left_item {
-              		margin-left: 0;
-              	} 
-                  .more {
-                  	padding-top: 3.9em !important;
-                  }
-              	  .number {
-                    justify-content: flex-end !important;
-              	}
-              }
-            	.bg_city {
+                .left {
+                    align-self: flex-start !important;
+                    margin-left: 45em;
+                }
+                .right {
+                    align-self: flex-end !important;
+                    .right_top {
+                        padding-right: 50em;
+                    }
+                    .left_item {
+                        margin-left: 0;
+                    }
+                    .more {
+                        padding-top: 3.9em !important;
+                    }
+                    .number {
+                        justify-content: flex-end !important;
+                    }
+                }
+                .bg_city {
                     p {
                         font: 56em "BebasNeueBold";
                         color: #fff;
@@ -265,7 +265,7 @@
                     }
                 }
                 .tab_content_block {
-                h2 {
+                    h2 {
                         font: 19.5em "BebasNeueBold";
                         color: #fff;
                         letter-spacing: 0em;
@@ -278,8 +278,7 @@
                             letter-spacing: .1em;
                         }
                     }
-
-                  }
+                }
             }
         }
         .tab_name {
@@ -340,56 +339,65 @@
 
 
 @media screen and (max-width: 9999px) {
-	#home .container, html {
-		min-height: 2092px;
-	}
+    #home .container,
+    html {
+        min-height: 2092px;
+    }
 }
 
 @media screen and (max-width: 3500px) {
-	#home .container, html{
-		min-height: 1260px;
-	}
+    #home .container,
+    html {
+        min-height: 1260px;
+    }
 }
 
 @media screen and (max-width: 2260px) {
-	#home .container, html {
-		min-height: 996px;
-	}
+    #home .container,
+    html {
+        min-height: 996px;
+    }
 }
 
 @media screen and (max-width: 1680px) {
-	#home .container, html {
-		min-height: 620px;
-	}
+    #home .container,
+    html {
+        min-height: 620px;
+    }
     #home .container .tab_content .home_page .tab_content_block .number {
         padding-top: 0.1em;
     }
     #home .container .tab_content .home_page .tab_content_block h2 {
         padding-top: 3.5em;
     }
-    #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2, {
+    #home .container .tab_content .moscow_page .tab_content_block h2,
+    #home .container .tab_content .spb_page .tab_content_block h2,
+    {
         padding-top: 4.5em;
     }
     #home .container .tab_content .reg_page .tab_content_block h2 {
-    padding-top: 2em;
-}
-#home .container .tab_content .reg_page .tab_content_block .number .right .more {
-    padding-top: 0.6em !important;
-}
+        padding-top: 2em;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .right .more {
+        padding-top: 0.6em !important;
+    }
 }
 
 @media screen and (max-width: 1365px) {
-  #home .container, html {
-		min-height: 640px;
-	}
-	#home .container .tab_content .home_page .bg_tab {
-		width: 95%;
-		left: 2.5%;
-	}
-	#home .container .tab_content .home_page .tab_content_block h2 {
-		letter-spacing: 0.4em;
-	}
-    #home .container .tab_content .moscow_page .bg_tab, #home .container .tab_content .spb_page .bg_tab, #home .container .tab_content .reg_page .bg_tab {
+    #home .container,
+    html {
+        min-height: 640px;
+    }
+    #home .container .tab_content .home_page .bg_tab {
+        width: 95%;
+        left: 2.5%;
+    }
+    #home .container .tab_content .home_page .tab_content_block h2 {
+        letter-spacing: 0.4em;
+    }
+    #home .container .tab_content .moscow_page .bg_tab,
+    #home .container .tab_content .spb_page .bg_tab,
+    #home .container .tab_content .reg_page .bg_tab {
         width: 95% !important;
         left: 2.5% !important;
     }
@@ -399,156 +407,168 @@
     #home .container .tab_name .tab_names p {
         font-size: 7em;
     }
-    #home .container, html {
+    #home .container,
+    html {
         min-height: 576px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    #home .container, html {
+    #home .container,
+    html {
         min-height: 400px;
     }
 }
 
 @media screen and (max-width: 567px) {
 
-    #home .container, html {
+    #home .container,
+    html {
         min-height: 568px;
     }
     #home .container .tab_content .moscow_page .tab_content_block .number,
-     #home .container .tab_content .spb_page .tab_content_block .number, 
-     #home .container .tab_content .reg_page .tab_content_block .number {
+    #home .container .tab_content .spb_page .tab_content_block .number,
+    #home .container .tab_content .reg_page .tab_content_block .number {
         flex-direction: column;
         align-items: center;
-     }
-     #home .container .tab_content .moscow_page .tab_content_block .number .top, #home .container .tab_content .spb_page .tab_content_block .number .top, #home .container .tab_content .reg_page .tab_content_block .number .top {
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .top,
+    #home .container .tab_content .spb_page .tab_content_block .number .top,
+    #home .container .tab_content .reg_page .tab_content_block .number .top {
         padding-bottom: 0.25em;
-     }
-     #home .container .tab_content .moscow_page .tab_content_block .number .left p .left_item, #home .container .tab_content .moscow_page .tab_content_block .number .right p .left_item, #home .container .tab_content .spb_page .tab_content_block .number .left p .left_item, #home .container .tab_content .spb_page .tab_content_block .number .right p .left_item, #home .container .tab_content .reg_page .tab_content_block .number .left p .left_item, #home .container .tab_content .reg_page .tab_content_block .number .right p .left_item {
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .left p .left_item,
+    #home .container .tab_content .moscow_page .tab_content_block .number .right p .left_item,
+    #home .container .tab_content .spb_page .tab_content_block .number .left p .left_item,
+    #home .container .tab_content .spb_page .tab_content_block .number .right p .left_item,
+    #home .container .tab_content .reg_page .tab_content_block .number .left p .left_item,
+    #home .container .tab_content .reg_page .tab_content_block .number .right p .left_item {
         font-size: 8em;
-     }
-     #home .container .tab_content .home_page .tab_content_block .number{
+    }
+    #home .container .tab_content .home_page .tab_content_block .number {
         font-size: 100em;
-     }
-     #home .container .tab_content .home_page .tab_content_block .bottom {
+    }
+    #home .container .tab_content .home_page .tab_content_block .bottom {
         font-size: 7.15em;
         letter-spacing: 1.2em;
         padding-left: 3em;
         padding-top: 0.8em;
-     }
-     #home .container .tab_content .home_page .tab_content_block .bottom span {
-          letter-spacing: 1.25em;
-     }
-     #home .container .tab_content .moscow_page .tab_content_block .number .right,
-      #home .container .tab_content .spb_page .tab_content_block .number .right{
+    }
+    #home .container .tab_content .home_page .tab_content_block .bottom span {
+        letter-spacing: 1.25em;
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .right,
+    #home .container .tab_content .spb_page .tab_content_block .number .right {
         align-self: center;
         padding-top: 0;
         order: 2;
         margin-right: 0;
-      }
-      #home .container .tab_content .moscow_page .tab_content_block .number .left,
-       #home .container .tab_content .spb_page .tab_content_block .number .left {
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .left,
+    #home .container .tab_content .spb_page .tab_content_block .number .left {
         order: 2;
-       }
-       #home .container .tab_content .home_page .tab_content_block h2 {
+    }
+    #home .container .tab_content .home_page .tab_content_block h2 {
         line-height: 170%;
         font-size: 13em;
         padding-top: 0;
-       }
-       #home .container .tab_content .moscow_page .tab_content_block h2,
-        #home .container .tab_content .spb_page .tab_content_block h2,
-        #home .container .tab_content .reg_page .tab_content_block h2 {
-            letter-spacing: 0.7em;
-            margin-bottom: 2em;
-            padding-top: 0em;
-        }
-        #home .container .tab_content .moscow_page .tab_content_block .number .right .more,
-         #home .container .tab_content .spb_page .tab_content_block .number .right .more,
-         #home .container .tab_content .reg_page .tab_content_block .number .right .more {
-            text-align: center;
-            padding-top: 2em;
-            font-size: 7em;
-         }
-         #home .container .tab_content .moscow_page .tab_content_block .number .center,
-          #home .container .tab_content .spb_page .tab_content_block .number .center,
-          #home .container .tab_content .reg_page .tab_content_block .number .center {
-            padding-left: 0;
-          }
-          #home .container .tab_content .moscow_page .tab_content_block .number .num {
-            padding-right: 0.08em;
-          }
-          #home .container .tab_content .moscow_page .bg_city p {
-            font-size: 50em;
-          }
-          #home .container .tab_content .spb_page .bg_city p {
-            font-size: 25em;
-            padding-top: 0em;
-          }
-          #home .container .tab_content .reg_page .tab_content_block h2 {
-            font-size: 14em;
-            margin-bottom: 1em;
-          }
-          #home .container .tab_content .reg_page .tab_content_block .number {
-            flex-direction: column;
-            align-items: center;
-          }
-          #home .container .tab_content .reg_page .tab_content_block .number .left {
-            margin: 0;
-            align-self: center !important;
-          }
-          #home .container .tab_content .moscow_page .tab_content_block .number .right .number, #home .container .tab_content .spb_page .tab_content_block .number .right .number, #home .container .tab_content .reg_page .tab_content_block .number .right .number {
-            font-size: 10em;
-            letter-spacing: 0.13em;
-          }
-          #home .container .tab_content .reg_page .tab_content_block .number .right p {
-            padding: 0;
-          }
-          #home .container .tab_content .reg_page .tab_content_block .number .right .more {
-            padding-top: 10.2em !important;
-          }
-          #home .container .tab_content .reg_page .tab_content_block .number .right {
-            margin: 0;
-            align-self: center !important;
-          }
-          #home .container .tab_name .top {
-            letter-spacing: 2em;
-            padding-left: 2em;
-            font-size: 8em;
-          }
-          #home .container .tab_name .tab_names p {
-            font-size: 12em;
-          }
-          #home .container .tab_name .tab_names .line {
-            width: 10em;
-          }
-          body {
-            overflow: hidden;
-          }
-          #wrapper {
-             //position: fixed;
-             width: 100%;
-          }
-          #home .container .tab_name {
-            bottom: 25em;
-          }
-          #home .container .tab_name .tab_names p span {
-            bottom: -0.8em;
-          }
-
-        #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
-            margin-bottom: 0.8em;
-        }
-        #home .container .tab_content .moscow_page .tab_content_block .number .right .more, #home .container .tab_content .spb_page .tab_content_block .number .right .more {
-             padding-top: 1em;
-        }
-        @media screen and (max-height: 568px) {
+    }
+    #home .container .tab_content .moscow_page .tab_content_block h2,
+    #home .container .tab_content .spb_page .tab_content_block h2,
+    #home .container .tab_content .reg_page .tab_content_block h2 {
+        letter-spacing: 0.7em;
+        margin-bottom: 2em;
+        padding-top: 0em;
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .right .more,
+    #home .container .tab_content .spb_page .tab_content_block .number .right .more,
+    #home .container .tab_content .reg_page .tab_content_block .number .right .more {
+        text-align: center;
+        padding-top: 2em;
+        font-size: 7em;
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .center,
+    #home .container .tab_content .spb_page .tab_content_block .number .center,
+    #home .container .tab_content .reg_page .tab_content_block .number .center {
+        padding-left: 0;
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .num {
+        padding-right: 0.08em;
+    }
+    #home .container .tab_content .moscow_page .bg_city p {
+        font-size: 50em;
+    }
+    #home .container .tab_content .spb_page .bg_city p {
+        font-size: 25em;
+        padding-top: 0em;
+    }
+    #home .container .tab_content .reg_page .tab_content_block h2 {
+        font-size: 14em;
+        margin-bottom: 1em;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number {
+        flex-direction: column;
+        align-items: center;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .left {
+        margin: 0;
+        align-self: center !important;
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .right .number,
+    #home .container .tab_content .spb_page .tab_content_block .number .right .number,
+    #home .container .tab_content .reg_page .tab_content_block .number .right .number {
+        font-size: 10em;
+        letter-spacing: 0.13em;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .right p {
+        padding: 0;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .right .more {
+        padding-top: 10.2em !important;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .right {
+        margin: 0;
+        align-self: center !important;
+    }
+    #home .container .tab_name .top {
+        letter-spacing: 2em;
+        padding-left: 2em;
+        font-size: 8em;
+    }
+    #home .container .tab_name .tab_names p {
+        font-size: 12em;
+    }
+    #home .container .tab_name .tab_names .line {
+        width: 10em;
+    }
+    body {
+        overflow: hidden;
+    }
     #wrapper {
-             position: relative;
-          }
-          body {
+        //position: fixed;
+        width: 100%;
+    }
+    #home .container .tab_name {
+        bottom: 25em;
+    }
+    #home .container .tab_name .tab_names p span {
+        bottom: -0.8em;
+    }
+
+    #home .container .tab_content .moscow_page .tab_content_block h2,
+    #home .container .tab_content .spb_page .tab_content_block h2 {
+        margin-bottom: 0.8em;
+    }
+    #home .container .tab_content .moscow_page .tab_content_block .number .right .more,
+    #home .container .tab_content .spb_page .tab_content_block .number .right .more {
+        padding-top: 1em;
+    }
+    @media screen and (max-height: 568px) {
+        #wrapper {
+            position: relative;
+        }
+        body {
             overflow: visible;
-          }
+        }
     }
 }
-
-
