--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -39,7 +39,8 @@ html {
 
 body {
   font-size: 10px;
-  height: 100%; }
+  height: 100%;
+  min-height: 100vh; }
 
 .wrapper_active {
   position: fixed !important;
