--- a/portfolio/Barbershop/app/css/dop.css
+++ b/portfolio/Barbershop/app/css/dop.css
@@ -221,8 +221,7 @@
       #home .container .home_page .bottom_section .top {
         font: 4.95em "BebasNeueLight";
         color: #fff;
-        letter-spacing: 0.125em;
-        padding-left: 1em; }
+        letter-spacing: 0.125em; }
         #home .container .home_page .bottom_section .top .span2 {
           font-family: "BebasNeueBook"; }
         #home .container .home_page .bottom_section .top .span3 {
@@ -313,13 +312,15 @@
   #home .container, html {
     min-height: 760px; }
   #home .container .home_page .top_section .left_item .item_content .block, #home .container .home_page .top_section .right_item .item_content .block {
-    margin: 0 3em; } }
+    margin: 0 3em; }
+  body {
+    height: auto; }
+  #home .container .home_page .center_section h5 {
+    padding-top: 2em; } }
 
 @media screen and (max-width: 567px) {
   #home .container, html {
     min-height: 568px; }
-  body {
-    height: auto; }
   #home .container .home_page .top_section {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -344,7 +345,7 @@
   #home .container .home_page .center_section h5 {
     padding-bottom: 1em; }
   #home .container .home_page .bottom_section {
-    font-size: 2em; }
+    font-size: 1em; }
   #home .container .home_page .bg {
     display: none; } }
 
