--- a/portfolio/Barbershop/app/css/invest.css
+++ b/portfolio/Barbershop/app/css/invest.css
@@ -5,6 +5,17 @@
   #home .container {
     height: 100%; }
 
+.logo {
+  position: relative; }
+  .logo .left_b {
+    position: absolute;
+    background: url(../img/logo_Invest.png) no-repeat;
+    width: 33.4em;
+    height: 24.4em;
+    right: -37em;
+    -webkit-background-size: contain;
+            background-size: contain; }
+
 .bg_page_home {
   width: 100%;
   height: 100%;
