--- a/portfolio/Barbershop/app/scss/_fonts.scss
+++ b/portfolio/Barbershop/app/scss/_fonts.scss
@@ -5,3 +5,4 @@
 @include font-face("BebasNeueRegular", "../fonts/Bebas/BebasRegular/BebasRegular");
 @include font-face("BebasNeueBold", "../fonts/Bebas/BebasBold/BebasBold");
 @include font-face("RobotoRegular", "../fonts/Roboto/RobotoRegular/RobotoRegular");
+@include font-face("RobotoCondensed", "../fonts/Roboto/RobotoCondensed/RobotoCondensedRegular");
