--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -4,17 +4,26 @@
     position: relative;
     background: #101011;
     height: 100%;
+    min-width: 320px;
 }
 
 html {
     height: 100%;
     background: #101011;
+    min-width: 320px;
 }
 
+
+.container {
+    min-width: 320px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 
 body {
     font-size: 10px;
     height: 100%;
+    min-width: 320px;
     min-height: 100vh;
 }
 
@@ -31,7 +40,7 @@ p {
     display: none;
     position: absolute;
     right: 15px;
-    top: 23px;
+    top: 20px;
     z-index: 1000;
     a {
         display: block;
@@ -189,6 +198,7 @@ p {
 
 #contacts_tab {
     height: 100%;
+    min-height: 100vh;
     position: relative;
     z-index: 2;
     .bg_all {
@@ -249,21 +259,22 @@ p {
         	font: 8em "BebasNeueBook";
         	color: #fff;
         	text-align: center;
-        	letter-spacing: 0.21em;
+        	letter-spacing: 0.2em;
         	padding-left: 0.21em;
         }
         h2 {
         	font: 10.7em "BebasNeueRegular";
         	color: #fff;
         	text-align: center;
-        	letter-spacing: 0.1em;
+        	letter-spacing: 0.09em;
+            padding-left: 0.1em;
         }
         .number {
         	font: 10.7em "BebasNeueRegular";
         	text-align: center;
         	color: #fff;
-        	letter-spacing: 0.175em;
-        	padding-right: 0.45em;
+        	letter-spacing: 0.165em;
+            padding-left: 0.165em;
         	padding-top: 0.1em;
         }
         .bottom_block {
