--- a/portfolio/Barbershop/app/scss/_media.scss
+++ b/portfolio/Barbershop/app/scss/_media.scss
@@ -1,3 +1,8 @@
+@media screen and (min-width: 3501px) {
+   .container {
+	  	max-width: 3200px;
+	  }
+}
 @media screen and (max-width: 3500px) {
 	  .container {
 	  	max-width: 1920px;
