--- a/portfolio/Barbershop/app/css/projects.css
+++ b/portfolio/Barbershop/app/css/projects.css
@@ -41,6 +41,32 @@
           position: relative;
           margin: 0 auto; }
           #home .container .home_page .page_content .center_block .img .img_box {
+            position: relative;
+            width: 65em;
+            height: 65em;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center; }
+            #home .container .home_page .page_content .center_block .img .img_box .shadow {
+              position: absolute;
+              height: 0em;
+              width: 0em;
+              z-index: 1;
+              top: 50%;
+              left: 50%;
+              -webkit-box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7);
+                      box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7); }
+            #home .container .home_page .page_content .center_block .img .img_box img {
+              position: relative;
+              z-index: 2;
+              width: 100%;
+              height: auto; }
+          #home .container .home_page .page_content .center_block .img .first_logo {
             overflow: hidden;
             position: relative;
             width: 65em;
@@ -49,10 +75,10 @@
                     border-radius: 50%;
             -webkit-box-shadow: 0px 0px 80em -20px rgba(235, 230, 235, 0.7);
                     box-shadow: 0px 0px 80em -20px rgba(235, 230, 235, 0.7); }
-          #home .container .home_page .page_content .center_block .img img {
-            position: absolute;
-            width: 100%;
-            top: -8.5em; }
+            #home .container .home_page .page_content .center_block .img .first_logo img {
+              position: absolute;
+              width: 100%;
+              top: -8.5em; }
           #home .container .home_page .page_content .center_block .img .txt {
             position: absolute;
             right: -120em;
@@ -88,13 +114,15 @@
               margin: 0 auto;
               height: 12em;
               width: auto;
-              opacity: 0.6; }
+              opacity: 0.6;
+              cursor: pointer; }
             #home .container .home_page .page_content .bottom_projects .projects_content .block p {
               font: 3em "BebasNeueBook";
               color: #afafaf;
               padding-top: 0.7em;
               text-align: center;
-              word-spacing: 0.2em; }
+              word-spacing: 0.2em;
+              cursor: pointer; }
           #home .container .home_page .page_content .bottom_projects .projects_content .active img {
             opacity: 1; }
           #home .container .home_page .page_content .bottom_projects .projects_content .active p {
@@ -119,23 +147,27 @@
           text-align: center; }
 
 @media screen and (max-width: 9999px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 2092px; } }
 
 @media screen and (max-width: 3500px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 1260px; }
   #home .container .home_page .page_content .bottom_projects .projects_content .block {
     margin: 2em 4.8em; } }
 
 @media screen and (max-width: 2260px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 996px; }
   #home .container .home_page .page_content .bottom_projects .projects_content .block img {
     height: 11em; } }
 
 @media screen and (max-width: 1680px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 630px; }
   #home .container .home_page .page_content .bottom_projects .projects_content .block p {
     font-size: 4em; }
@@ -145,7 +177,8 @@
     right: -140em; } }
 
 @media screen and (max-width: 1365px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 786px; }
   #home .container .home_page .bg {
     width: 95%;
@@ -186,7 +219,8 @@
     margin-top: 40em; } }
 
 @media screen and (max-width: 1023px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 1006px; }
   #home .container .home_page .bg {
     display: none; }
@@ -206,7 +240,8 @@
     margin-top: 70em; } }
 
 @media screen and (max-width: 567px) {
-  #home .container, html {
+  #home .container,
+  html {
     min-height: 568px; }
   body {
     height: auto; }
