--- a/portfolio/Barbershop/app/scss/invest.scss
+++ b/portfolio/Barbershop/app/scss/invest.scss
@@ -143,6 +143,7 @@
                         .last {
                             font: 94.5em "BebasNeueBold";
                             line-height: 80%;
+                            text-shadow: 0.05em 0px 0px rgba(112, 112, 112, 1);
                         }
                         .first {
                             font: 11.5em "BebasNeueRegular";
